--- a/.gitignore
+++ b/.gitignore
@@ -2,5 +2,5 @@
 # This .gitignore file was automatically created by Microsoft(R) Visual Studio.
 ################################################################################
 
-/process_1.txt
-/process_2.txt
+*.txt
+!config.txt
