--- a/test1.vcxproj.filters
+++ b/test1.vcxproj.filters
@@ -15,7 +15,7 @@
     </Filter>
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="test1.cpp">
+    <ClCompile Include="mc01.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
